Fix navbar responsiveness and clean up styles

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "lucide-react": "^0.563.0",
+    "motion": "^12.34.0",
+    "ogl": "^1.0.11",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
